# iranti

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONCURRENCY_IMPLEMENTATION.md  DEPLOYMENT_READY.md  Dockerfile  FIXES_APPLIED.md  MANIFEST.in  POLICY_IMPLEMENTATION.md  README.md  context_degradation_results_20260228_170720.json  crewai_experiment_results_20260228_165931.json  crewai_experiment_results_20260228_170159.json  docker-compose.yml  experiment_results_20260228_165052.json  extreme_context_results_20260228_171753.json  extreme_context_results_20260228_172738.json  package-lock.json  package.json  setup.py  test-express.js  test-ts.ts  test.json  tsconfig.json
clients/python/: LICENSE  README.md  iranti.py  pyproject.toml  test_client.py
docs/: API.md  CONCURRENCY_SAFETY.md  ESCALATION_TEMPLATE.md  FIXES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_ESCALATION_FORMAT.md  MULTI_FRAMEWORK_VALIDATION.md  POLICY_RESOLUTION.md  PRODUCTION_HARDENING.md  PUBLISHING_DOCKER.md  PUBLISHING_PYPI.md  README.md  SECURITY_AUDIT.md  experiment_a_output.txt  experiment_b_output.txt  issue_1_fix_verification.md  issue_1_hybrid_fix_verification.md  issue_2_fix_verification.md  issue_3_fix_verification.md  issue_4_fix_verification.md  issue_5_fix_verification.md  issue_6_fix_verification.md  issue_7_fix_verification.md  issue_8_fix_verification.md  issue_9_fix_verification.md  validation_results.md
experiments/: context_degradation.py  crewai_integration.py  extreme_context_test.py  parallel_test.py
prisma/: schema.prisma
scripts/: api-key-create.ts  (+36 more)
(+234 files in other folders)
