[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iranti"
version = "0.1.3"
description = "Python client for Iranti memory infrastructure"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
  {name = "NF"}
]
keywords = ["iranti", "ai", "agents", "memory", "chatbot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/nfemmanuel/iranti"
Repository = "https://github.com/nfemmanuel/iranti"
Issues = "https://github.com/nfemmanuel/iranti/issues"

[tool.setuptools]
py-modules = ["iranti"]
